Bug 1307710 - part4: Enable getCueAsHTML.html testcase, disable entities.html, tags.html, modify timestamp.html.ini .r=rillian
MozReview-Commit-ID: HLG1jyv2bms

UltraBlame original commit: 8e673e61fb8e84afcbb7eb8a48512d50fe3b101e

--- a/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/entities.html.ini
+++ b/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/entities.html.ini
@@ -3,6 +3,25 @@ entities
 .
 html
 ]
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1307710
 type
 :
 testharness
