--- a/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/timestamps.html.ini
+++ b/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/timestamps.html.ini
@@ -18,7 +18,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -31,7 +31,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -44,7 +44,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -83,7 +83,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -96,7 +96,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -109,7 +109,7 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -122,4 +122,4 @@ timestamps
 ]
 expected
 :
-FAIL
+PASS
