--- a/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/tree-building.html.ini
+++ b/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/tree-building.html.ini
@@ -22,7 +22,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -37,7 +37,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -52,7 +52,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -67,7 +67,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -82,7 +82,7 @@ fa6993eaa94404648d8b52e2830e53369404fdcb
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -97,7 +97,7 @@ e4d351e1a6b40a7dace801b722efaa200c4895f2
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -112,7 +112,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -127,7 +127,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -142,7 +142,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -157,7 +157,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -187,7 +187,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -202,7 +202,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -217,7 +217,7 @@ c0da62d1c8716ca544c96799f06ac7e4664500fb
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -247,7 +247,7 @@ ab2024b4e65ed64a751adbe8aae1e84ee61bf3e6
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -262,7 +262,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -277,7 +277,7 @@ building
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -292,7 +292,7 @@ e5ca35cc29404efc0ebd58aa5f6efefc86fc5287
 ]
 expected
 :
-FAIL
+PASS
 [
 WebVTT
 cue
@@ -307,4 +307,4 @@ e535c486dac7dc571463b150adc55fd841bc3008
 ]
 expected
 :
-FAIL
+PASS
