--- a/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/tags.html.ini
+++ b/testing/web-platform/meta/webvtt/webvtt-file-format-parsing/webvtt-cue-text-parsing-rules/tests/tags.html.ini
@@ -3,6 +3,25 @@ tags
 .
 html
 ]
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1307710
 type
 :
 testharness
