Bug 1337772 - Fix intermittent browser_context_menu_autocomplete_interaction.js. r=MattN
MozReview-Commit-ID: 6vAWN4z2wRP

UltraBlame original commit: ebf65a1af072e0c4d258257477812dc66c8b635d

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -151,6 +151,51 @@ browser_context_menu_autocomplete_interaction
 .
 js
 ]
+skip
+-
+if
+=
+asan
+|
+|
+(
+os
+=
+=
+'
+linux
+'
+&
+&
+debug
+&
+&
+(
+bits
+=
+=
+32
+)
+)
+#
+disabled
+on
+asan
+and
+linux
+32bit
+debug
+because
+of
+performance
+-
+related
+intermittents
+(
+see
+bug
+1337772
+)
 [
 browser_username_select_dialog
 .
