Bug 909102 - Fix middle-clicking on a folder in the left panel of the Library (to open all items within the folder). r=mak
MozReview-Commit-ID: 75Z8wOynfQh

UltraBlame original commit: 55d9a513c90e37af3d2fe22de2f01c1797f97b35

--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -210,6 +210,11 @@ browser_library_left_pane_fixnames
 js
 ]
 [
+browser_library_left_pane_middleclick
+.
+js
+]
+[
 browser_library_left_pane_select_hierarchy
 .
 js
