--- a/toolkit/content/tests/browser/browser.ini
+++ b/toolkit/content/tests/browser/browser.ini
@@ -101,6 +101,21 @@ file_blockMedia_shouldNotPlay
 .
 html
 [
+browser_block_autoplay_playAfterTabVisible
+.
+js
+]
+tags
+=
+audiochannel
+support
+-
+files
+=
+file_nonAutoplayAudio
+.
+html
+[
 browser_bug295977_autoscroll_overflow
 .
 js
