Bug 1337525 - add mochitests for inbound-rtp and outbound-rtp stats; r=jib
MozReview-Commit-ID: 1RX4DsBEkQA

UltraBlame original commit: a9869c35855329f1a23fb8d7ac13d76261224a01

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -3062,3 +3062,32 @@ test_peerConnection_bug1227781
 .
 html
 ]
+[
+test_peerConnection_stats
+.
+html
+]
+skip
+-
+if
+=
+(
+android_version
+=
+=
+'
+18
+'
+)
+#
+android
+(
+Bug
+1189784
+timeouts
+on
+4
+.
+3
+emulator
+)
