Bug 1343465 - part2 : add test. r=baku
MozReview-Commit-ID: HypzfD053xW

UltraBlame original commit: 60d90be2e7bc6c6bd961c95fe3feae26ebe011c2

--- a/toolkit/content/tests/browser/browser.ini
+++ b/toolkit/content/tests/browser/browser.ini
@@ -101,6 +101,21 @@ file_blockMedia_shouldNotPlay
 .
 html
 [
+browser_block_playMediaInMuteTab
+.
+js
+]
+tags
+=
+audiochannel
+support
+-
+files
+=
+file_nonAutoplayAudio
+.
+html
+[
 browser_block_autoplay_playAfterTabVisible
 .
 js
