Bug 1344027 - Fix most of the remaining ESLint no-undef issues in browser/components. r=jaws
MozReview-Commit-ID: DUnxVITvZgh

UltraBlame original commit: 8947d02cec5d0de02f090b70d5352e95c51f1abc

--- a/.eslintignore
+++ b/.eslintignore
@@ -354,6 +354,8 @@ tabview
 *
 #
 generated
+&
+special
 files
 in
 cld2
@@ -365,11 +367,8 @@ translation
 /
 cld2
 /
-cld
--
-worker
-.
-js
+*
+*
 browser
 /
 extensions
