--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -4836,42 +4836,6 @@ desktop1604
 test
 "
 }
-run
--
-on
--
-projects
-:
-by
--
-test
--
-platform
-:
-linux64
--
-qr
-/
-.
-*
-:
-[
-'
-graphics
-'
-'
-mozilla
--
-central
-'
-]
-default
-:
-[
-'
-all
-'
-]
 chunks
 :
 by
@@ -5725,57 +5689,23 @@ test
 -
 platform
 :
-linux64
--
-stylo
-/
-opt
+default
 :
 [
-'
-stylo
-'
-'
-autoland
-'
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
-linux64
--
-stylo
-/
-debug
-:
-[
-'
-stylo
-'
-'
-autoland
-'
-'
-mozilla
--
-inbound
-'
-'
-mozilla
--
-central
-'
-'
-try
-'
 ]
 e10s
 :
+#
+run
+only
+e10s
+tests
+for
+this
+platform
+see
+bug
+1343301
 by
 -
 test
@@ -5788,29 +5718,38 @@ stylo
 /
 opt
 :
+#
+no
+opt
+on
+inbound
+see
+bug
+1339604
 by
 -
 project
 :
+stylo
+:
+true
+autoland
+:
+true
 mozilla
 -
-inbound
+central
 :
-false
+true
 default
 :
-both
+false
 linux64
 -
 stylo
 /
 debug
 :
-#
-only
-e10s
-on
-inbound
 by
 -
 project
@@ -5820,9 +5759,20 @@ mozilla
 inbound
 :
 true
+stylo
+:
+true
+autoland
+:
+true
+mozilla
+-
+central
+:
+true
 default
 :
-both
+false
 mozharness
 :
 script
