bug 1344321 - enable linux nightly tests. r=callek DONTBUILD
UltraBlame original commit: a557cf5a3330bdd4f0d782240a09a4c92d4b7a2e

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -197,6 +197,41 @@ external
 media
 -
 tests
+linux32
+-
+nightly
+/
+opt
+:
+build
+-
+platform
+:
+linux
+-
+nightly
+/
+opt
+test
+-
+sets
+:
+-
+linux32
+-
+tests
+-
+linux32
+-
+opt
+-
+tests
+-
+external
+-
+media
+-
+tests
 linux64
 /
 debug
@@ -237,6 +272,55 @@ build
 platform
 :
 linux64
+/
+opt
+test
+-
+sets
+:
+-
+common
+-
+tests
+-
+external
+-
+media
+-
+tests
+-
+web
+-
+platform
+-
+tests
+-
+opt
+-
+only
+-
+tests
+-
+desktop
+-
+screenshot
+-
+capture
+-
+talos
+linux64
+-
+nightly
+/
+opt
+:
+build
+-
+platform
+:
+linux64
+-
+nightly
 /
 opt
 test
