--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -5689,23 +5689,57 @@ test
 -
 platform
 :
-default
+linux64
+-
+stylo
+/
+opt
 :
 [
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+linux64
+-
+stylo
+/
+debug
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 e10s
 :
-#
-run
-only
-e10s
-tests
-for
-this
-platform
-see
-bug
-1343301
 by
 -
 test
@@ -5718,38 +5752,29 @@ stylo
 /
 opt
 :
-#
-no
-opt
-on
-inbound
-see
-bug
-1339604
 by
 -
 project
 :
-stylo
-:
-true
-autoland
-:
-true
 mozilla
 -
-central
-:
-true
-default
+inbound
 :
 false
+default
+:
+both
 linux64
 -
 stylo
 /
 debug
 :
+#
+only
+e10s
+on
+inbound
 by
 -
 project
@@ -5759,20 +5784,9 @@ mozilla
 inbound
 :
 true
-stylo
-:
-true
-autoland
-:
-true
-mozilla
--
-central
-:
-true
 default
 :
-false
+both
 mozharness
 :
 script
