--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -11,22 +11,23 @@ skip
 -
 if
 =
+(
+os
+=
+=
+'
+linux
+'
+&
+&
 debug
-#
-Disabled
-on
-debug
-platforms
-while
-tests
-are
-not
-run
-in
-debug
-on
-Github
-.
+&
+&
+bits
+=
+=
+32
+)
 support
 -
 files
@@ -107,13 +108,6 @@ examples
 /
 doc
 -
-asm
-.
-html
-examples
-/
-doc
--
 scripts
 .
 html
@@ -167,15 +161,6 @@ examples
 /
 doc
 -
-return
--
-values
-.
-html
-examples
-/
-doc
--
 sourcemaps
 .
 html
@@ -202,11 +187,6 @@ doc
 sources
 .
 html
-examples
-/
-asm
-.
-js
 examples
 /
 bogus
@@ -296,13 +276,6 @@ js
 [
 browser_dbg
 -
-asm
-.
-js
-]
-[
-browser_dbg
--
 breaking
 .
 js
@@ -318,11 +291,6 @@ console
 .
 js
 ]
-skip
--
-if
-=
-true
 [
 browser_dbg
 -
@@ -468,13 +436,6 @@ pretty
 print
 -
 paused
-.
-js
-]
-[
-browser_dbg
--
-returnvalues
 .
 js
 ]
