Backed out changeset 189b914221f4 (bug 1324243) for wpt-11 bustage
UltraBlame original commit: 25e9dfe731cc910d4f0dd8fe4af10e62baa84f45

--- a/testing/web-platform/meta/url/url-setters.html.ini
+++ b/testing/web-platform/meta/url/url-setters.html.ini
@@ -3238,6 +3238,121 @@ URL
 :
 Setting
 <
+http
+:
+/
+/
+example
+.
+net
+>
+.
+host
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+:
+2
+'
+IPv6
+address
+syntax
+is
+normalized
+]
+expected
+:
+FAIL
+[
+<
+a
+>
+:
+Setting
+<
+http
+:
+/
+/
+example
+.
+net
+>
+.
+host
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+:
+2
+'
+IPv6
+address
+syntax
+is
+normalized
+]
+expected
+:
+FAIL
+[
+<
+area
+>
+:
+Setting
+<
+http
+:
+/
+/
+example
+.
+net
+>
+.
+host
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+:
+2
+'
+IPv6
+address
+syntax
+is
+normalized
+]
+expected
+:
+FAIL
+[
+URL
+:
+Setting
+<
 view
 -
 source
@@ -3755,6 +3870,115 @@ can
 gain
 a
 host
+]
+expected
+:
+FAIL
+[
+URL
+:
+Setting
+<
+http
+:
+/
+/
+example
+.
+net
+>
+.
+hostname
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+'
+IPv6
+address
+syntax
+is
+normalized
+]
+expected
+:
+FAIL
+[
+<
+a
+>
+:
+Setting
+<
+http
+:
+/
+/
+example
+.
+net
+>
+.
+hostname
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+'
+IPv6
+address
+syntax
+is
+normalized
+]
+expected
+:
+FAIL
+[
+<
+area
+>
+:
+Setting
+<
+http
+:
+/
+/
+example
+.
+net
+>
+.
+hostname
+=
+'
+[
+:
+:
+0
+:
+01
+\
+]
+'
+IPv6
+address
+syntax
+is
+normalized
 ]
 expected
 :
