Bug 1343999 - Disable twitch external media tests for debug builds in taskcluster. r=dustin
MozReview-Commit-ID: FyaDpoalgnh

UltraBlame original commit: 1465a237d393fe74b7268d5c5f546b178a3d6642

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -197,6 +197,14 @@ external
 media
 -
 tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 linux64
 /
 debug
@@ -253,6 +261,14 @@ external
 media
 -
 tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 -
 web
 -
@@ -321,6 +337,14 @@ external
 media
 -
 tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 -
 web
 -
@@ -639,6 +663,14 @@ external
 media
 -
 tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 #
 win32
 gpu
@@ -761,6 +793,14 @@ external
 media
 -
 tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 #
 win64
 gpu
