--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -261,6 +261,30 @@ media
 tests
 -
 youtube
+external
+-
+media
+-
+tests
+-
+slow
+:
+#
+twitch
+tests
+are
+too
+slow
+and
+stall
+under
+debug
+give
+them
+their
+own
+special
+set
 -
 external
 -
