Bug 1341219 - Set the browser engagement scalar probes to never expire. r=bsmedberg
MozReview-Commit-ID: DgrFXp368h9

UltraBlame original commit: dd661394dc03feb5b19b2e027eeee67229870cfb

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -145,9 +145,7 @@ startup
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -225,9 +223,7 @@ home
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -286,9 +282,7 @@ browser
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -363,9 +357,7 @@ home
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -441,9 +433,7 @@ browsing
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -540,9 +530,7 @@ browsing
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -648,9 +636,7 @@ domains
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -720,9 +706,7 @@ action
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -776,9 +760,7 @@ action
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -833,9 +815,7 @@ action
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -890,9 +870,7 @@ action
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
@@ -946,9 +924,7 @@ action
 .
 expires
 :
-"
-55
-"
+never
 kind
 :
 uint
