--- a/layout/style/test/mochitest.ini
+++ b/layout/style/test/mochitest.ini
@@ -416,14 +416,6 @@ test_bug73586
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1340334
 [
 test_bug74880
 .
@@ -666,14 +658,6 @@ test_bug534804
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1340334
 [
 test_bug573255
 .
@@ -1786,17 +1770,26 @@ skip
 -
 if
 =
+(
 toolkit
 =
 =
 '
 android
 '
+|
+|
+stylo
+)
 #
 bug
 775227
 for
 android
+bug
+1343168
+for
+stylo
 [
 test_value_computation
 .
@@ -1806,17 +1799,35 @@ skip
 -
 if
 =
+(
 toolkit
 =
 =
 '
 android
 '
+|
+|
+stylo
+)
+#
+bug
+1343168
+for
+stylo
 [
 test_value_storage
 .
 html
 ]
+skip
+-
+if
+=
+stylo
+#
+bug
+1343168
 [
 test_variable_serialization_computed
 .
