Bug 1343463 - Move indexeddb service worker test to workers folder, r=baku
UltraBlame original commit: 271dd75925bdb2bf5ff78f12a42bce675448afe6

--- a/dom/workers/test/mochitest.ini
+++ b/dom/workers/test/mochitest.ini
@@ -336,6 +336,12 @@ js
 window_suspended
 .
 html
+service_worker
+.
+js
+service_worker_client
+.
+html
 !
 /
 dom
@@ -848,6 +854,11 @@ html
 ]
 [
 test_rvals
+.
+html
+]
+[
+test_serviceworker
 .
 html
 ]
