Backed out changeset 271dd75925bd (bug 1343463) for causing test failures in test_navigator_secureContext.html
UltraBlame original commit: ca8a1212ff8c0abfa58f7c2481e213f2aae9d6b3

--- a/dom/indexedDB/test/mochitest.ini
+++ b/dom/indexedDB/test/mochitest.ini
@@ -87,6 +87,12 @@ js
 leaving_page_iframe
 .
 html
+service_worker
+.
+js
+service_worker_client
+.
+html
 third_party_iframe1
 .
 html
@@ -1292,6 +1298,11 @@ html
 ]
 [
 test_sandbox
+.
+html
+]
+[
+test_serviceworker
 .
 html
 ]
