--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -5713,69 +5713,19 @@ Rs
 chunks
 :
 16
-run
--
-on
--
-projects
-:
-by
--
-test
--
-platform
-:
-linux64
--
-stylo
-/
-opt
-:
-[
-'
-stylo
-'
-'
-autoland
-'
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
-linux64
--
-stylo
-/
-debug
-:
-[
-'
-stylo
-'
-'
-autoland
-'
-'
-mozilla
--
-inbound
-'
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
 e10s
 :
+#
+run
+only
+e10s
+tests
+for
+this
+platform
+see
+bug
+1343301
 by
 -
 test
@@ -5788,29 +5738,38 @@ stylo
 /
 opt
 :
+#
+no
+opt
+on
+inbound
+see
+bug
+1339604
 by
 -
 project
 :
+stylo
+:
+true
+autoland
+:
+true
 mozilla
 -
-inbound
+central
 :
-false
+true
 default
 :
-both
+false
 linux64
 -
 stylo
 /
 debug
 :
-#
-only
-e10s
-on
-inbound
 by
 -
 project
@@ -5820,9 +5779,20 @@ mozilla
 inbound
 :
 true
+stylo
+:
+true
+autoland
+:
+true
+mozilla
+-
+central
+:
+true
 default
 :
-both
+false
 mozharness
 :
 script
