Bug 1343301 - disable non-e10s Stylo tests because we will disable all non-e10s tests in 57 r=me
UltraBlame original commit: 1574d9c4275338189d52c2a9e6c7c30eb897b9d7

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -5713,6 +5713,71 @@ Rs
 chunks
 :
 16
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+opt
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+linux64
+-
+stylo
+/
+debug
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+default
+:
+[
+]
 e10s
 :
 #
