--- a/dom/quota/test/unit/xpcshell.ini
+++ b/dom/quota/test/unit/xpcshell.ini
@@ -68,8 +68,16 @@ files
 basics_profile
 .
 zip
+tempMetadataCleanup_profile
+.
+zip
 [
 test_basics
+.
+js
+]
+[
+test_tempMetadataCleanup
 .
 js
 ]
