Bug 1339081 - Part 13: Move morgue directory cleanup to new upgrade helper; r=asuth
UltraBlame original commit: c6c4db7bae511e07d2b7e1b8ccbe16546cc18cea

--- a/dom/quota/test/unit/xpcshell.ini
+++ b/dom/quota/test/unit/xpcshell.ini
@@ -68,11 +68,19 @@ files
 basics_profile
 .
 zip
+morgueCleanup_profile
+.
+zip
 tempMetadataCleanup_profile
 .
 zip
 [
 test_basics
+.
+js
+]
+[
+test_morgueCleanup
 .
 js
 ]
