--- a/dom/quota/test/unit/xpcshell.ini
+++ b/dom/quota/test/unit/xpcshell.ini
@@ -80,6 +80,9 @@ zip
 morgueCleanup_profile
 .
 zip
+obsoleteOriginAttributes_profile
+.
+zip
 originAttributesUpgrade_profile
 .
 zip
@@ -109,6 +112,11 @@ js
 ]
 [
 test_morgueCleanup
+.
+js
+]
+[
+test_obsoleteOriginAttributesUpgrade
 .
 js
 ]
