Bug 1339081 - Part 19: Strip obsolete origin attributes in IndexedDB databases (needed for bug 1314361), original patch by Kris Maglione; r=asuth
UltraBlame original commit: aa58383f87b57938afacda3fda54981ea6d9ea7d

--- a/dom/indexedDB/test/unit/xpcshell-parent-process.ini
+++ b/dom/indexedDB/test/unit/xpcshell-parent-process.ini
@@ -102,6 +102,9 @@ zip
 mutableFileUpgrade_profile
 .
 zip
+obsoleteOriginAttributes_profile
+.
+zip
 oldDirectories_profile
 .
 zip
@@ -168,6 +171,11 @@ skip
 if
 =
 release_or_beta
+[
+test_obsoleteOriginAttributesUpgrade
+.
+js
+]
 [
 test_blob_file_backed
 .
