Bug 1344616: Migrate content script mochitests to xpcshell. r=mixedpuppy
MozReview-Commit-ID: 2ljMgRTIi5r

UltraBlame original commit: 295f8f82ced346ca72e836ac9bbc33d21c8e92fd

--- a/toolkit/components/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell.ini
@@ -21,6 +21,10 @@ appname
 "
 thunderbird
 "
+dupe
+-
+manifest
+=
 support
 -
 files
@@ -32,6 +36,11 @@ data
 head_sync
 .
 js
+xpcshell
+-
+content
+.
+ini
 tags
 =
 webextensions
@@ -510,7 +519,11 @@ os
 android
 "
 [
-test_proxy_scripts
+include
+:
+xpcshell
+-
+content
 .
-js
+ini
 ]
