Bug 1343463 - Move indexeddb service worker test to serviceworkers folder, r=baku
UltraBlame original commit: 5e9a92053f10ce1e8e9ad39cc6b72ae8c3172a68

--- a/dom/workers/test/serviceworkers/mochitest.ini
+++ b/dom/workers/test/serviceworkers/mochitest.ini
@@ -1234,6 +1234,12 @@ js
 nofetch_handler_worker
 .
 js
+service_worker
+.
+js
+service_worker_client
+.
+html
 [
 test_bug1151916
 .
@@ -1674,6 +1680,11 @@ html
 ]
 [
 test_sanitize_domain
+.
+html
+]
+[
+test_serviceworker
 .
 html
 ]
