Bug 1268804 Part 3: Test storage api in WebExtensions, r=kmag
UltraBlame original commit: a167a17bdcdfb087e0929fcf806c2d5d60f214f6

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -402,6 +402,14 @@ test_ext_storage_tab
 html
 ]
 [
+test_ext_storage_manager_capabilities
+.
+html
+]
+scheme
+=
+https
+[
 test_ext_test
 .
 html
