Bug 1314678 - Don't perform clang plugin checks in artifact builds. r=mshal
Until we have the ability to properly make these flags conditional in
moz.configure, do not perform these checks.

MozReview-Commit-ID: CexvgiadIw0

UltraBlame original commit: 40bf14322955cc7427c21f87fd0408fd1e9d5622

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -15570,7 +15570,19 @@ dnl
 =
 =
 =
+if
+test
+-
+n
+"
+COMPILE_ENVIRONMENT
+"
+;
+then
 MOZ_CONFIG_CLANG_PLUGIN
+fi
+#
+COMPILE_ENVIRONMENT
 dnl
 =
 =
