--- a/old-configure.in
+++ b/old-configure.in
@@ -37767,7 +37767,19 @@ dnl
 =
 =
 =
+if
+test
+-
+n
+"
+COMPILE_ENVIRONMENT
+"
+;
+then
 MOZ_CONFIG_CLANG_PLUGIN
+fi
+#
+COMPILE_ENVIRONMENT
 dnl
 =
 =
