Bug 1345105 - Disable gnome-software-service on desktop1604-test. r=dustin
MozReview-Commit-ID: I14cViRPsl8

UltraBlame original commit: 0249dd5ea5da4d1a9393e938a9cbf7da181da0fe

--- a/taskcluster/docker/desktop1604-test/Dockerfile
+++ b/taskcluster/docker/desktop1604-test/Dockerfile
@@ -849,16 +849,49 @@ bug
 984944
 .
 ADD
+autostart
+/
 jockey
 -
 gtk
 .
 desktop
+autostart
+/
 deja
 -
 dup
 -
 monitor
+.
+desktop
+/
+etc
+/
+xdg
+/
+autostart
+/
+#
+Bug
+1345105
+-
+Do
+not
+run
+periodical
+update
+checks
+and
+downloads
+ADD
+autostart
+/
+gnome
+-
+software
+-
+service
 .
 desktop
 /
