Bug 1341754: Test SetURI in Location passes triggeringPrincipal. r=smaug
UltraBlame original commit: b20481a22b2d17cbc5503bdc4cfe9a6f3b434f1d

--- a/docshell/test/mochitest.ini
+++ b/docshell/test/mochitest.ini
@@ -51,6 +51,9 @@ headers
 bug691547_frame
 .
 html
+dummy_page
+.
+html
 file_anchor_scroll_after_document_open
 .
 html
@@ -454,6 +457,11 @@ html
 ]
 [
 test_windowedhistoryframes
+.
+html
+]
+[
+test_triggeringprincipal_location_seturi
 .
 html
 ]
