Bug 1345190 - disable stylo builds and tests on m-a r=aki DONTBUILD
UltraBlame original commit: 5762a99118ed8026e70fa06bd884943aa645f791

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -137,6 +137,34 @@ qr
 graphics
 '
 ]
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
 default
 :
 [
@@ -349,6 +377,34 @@ graphics
 mozilla
 -
 central
+'
+]
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
 '
 ]
 default
@@ -5137,6 +5193,53 @@ true
 e10s
 :
 false
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+default
+:
+[
+'
+all
+'
+]
 mozharness
 :
 script
