Backed out changeset 2288120b007e (bug 1345111) for Windows build failures a=backout
MozReview-Commit-ID: IcBrJg6Ff8T

UltraBlame original commit: c16695dbf5f01d02af35ad664ae819aa5ce532f4

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -2004,6 +2004,14 @@ DOMNodeID
 ]
 description
 =
+[
+PDocAccessible
+:
+:
+GetWindowedPluginIAccessible
+]
+description
+=
 #
 CPOWs
 [
@@ -2245,6 +2253,14 @@ PPluginInstance
 :
 :
 NPP_GetValue_NPPVpluginWantsAllNetworkStreams
+]
+description
+=
+[
+PPluginInstance
+:
+:
+NPP_GetValue_NPPVpluginNeedsXEmbed
 ]
 description
 =
@@ -2572,6 +2588,14 @@ description
 PPluginInstance
 :
 :
+NegotiatedCarbon
+]
+description
+=
+[
+PPluginInstance
+:
+:
 GetCompositionString
 ]
 description
@@ -2661,6 +2685,14 @@ PPluginModule
 :
 :
 OptionalFunctionsSupported
+]
+description
+=
+[
+PPluginModule
+:
+:
+PCrashReporter
 ]
 description
 =
@@ -3111,6 +3143,14 @@ description
 PContent
 :
 :
+PCrashReporter
+]
+description
+=
+[
+PContent
+:
+:
 NSSU2FTokenIsCompatibleVersion
 ]
 description
@@ -3264,6 +3304,14 @@ PContent
 :
 :
 AllocateLayerTreeId
+]
+description
+=
+[
+PContent
+:
+:
+GetGfxInfoFeatureStatus
 ]
 description
 =
@@ -3724,6 +3772,30 @@ PWebRenderBridge
 description
 =
 [
+PCompositorWidget
+:
+:
+EnterPresentLock
+]
+description
+=
+[
+PCompositorWidget
+:
+:
+LeavePresentLock
+]
+description
+=
+[
+PCompositorWidget
+:
+:
+ClearTransparentWindow
+]
+description
+=
+[
 PImageBridge
 :
 :
@@ -3800,6 +3872,14 @@ PLayerTransaction
 :
 :
 RequestProperty
+]
+description
+=
+[
+PTexture
+:
+:
+DestroySync
 ]
 description
 =
