Remove references to the Direct3D9 compositor. (bug 1318558 part 1, r=mattwoodrow)
UltraBlame original commit: 7312b15a05917a792682037720dbc981b3b84dff

--- a/old-configure.in
+++ b/old-configure.in
@@ -8416,6 +8416,43 @@ fi
 dnl
 VS2013
 +
+requires
+-
+FS
+when
+parallel
+building
+by
+make
+-
+jN
+.
+dnl
+If
+nothing
+compiler
+sometimes
+causes
+C1041
+error
+.
+CFLAGS
+=
+"
+CFLAGS
+-
+FS
+"
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+FS
+"
+dnl
+VS2013
++
 supports
 -
 Gw
@@ -44576,15 +44613,6 @@ COMPILE_ENVIRONMENT
 "
 ;
 then
-MOZ_CHECK_HEADER
-(
-d3d9
-.
-h
-MOZ_ENABLE_D3D9_LAYER
-=
-1
-)
 dnl
 D3D10
 Layers
@@ -44643,10 +44671,6 @@ MOZ_ENABLE_DWRITE_FONT
 AC_SUBST
 (
 MOZ_ENABLE_D2D_SURFACE
-)
-AC_SUBST
-(
-MOZ_ENABLE_D3D9_LAYER
 )
 AC_SUBST
 (
