Backed out 3 changesets (bug 1339256) for build bustage
Backed out changeset a6bb817bae08 (bug 1339256)
Backed out changeset 86fe1c44ac5a (bug 1339256)
Backed out changeset ed97037dae9c (bug 1339256)

UltraBlame original commit: 3bb0c61a3ee381aba22c15fefd9fc66f3d1b4245

--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -71705,6 +71705,18 @@ uint
 .
 html
 ]
+fail
+-
+if
+=
+(
+os
+!
+=
+'
+win
+'
+)
 skip
 -
 if
@@ -91888,6 +91900,18 @@ indices
 .
 html
 ]
+fail
+-
+if
+=
+(
+os
+!
+=
+'
+win
+'
+)
 skip
 -
 if
@@ -91997,6 +92021,18 @@ indices
 .
 html
 ]
+fail
+-
+if
+=
+(
+os
+!
+=
+'
+win
+'
+)
 skip
 -
 if
@@ -92061,6 +92097,18 @@ validation
 .
 html
 ]
+fail
+-
+if
+=
+(
+os
+!
+=
+'
+win
+'
+)
 skip
 -
 if
@@ -109463,6 +109511,18 @@ bounds
 .
 html
 ]
+fail
+-
+if
+=
+(
+os
+!
+=
+'
+win
+'
+)
 skip
 -
 if
