--- a/toolkit/components/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell.ini
@@ -313,6 +313,11 @@ test_ext_manifest_minimum_chrome_version
 js
 ]
 [
+test_ext_manifest_themes
+.
+js
+]
+[
 test_ext_onmessage_removelistener
 .
 js
