Bug 1072859 - Disable Geolocation on non-secure origins. r=jdm
MozReview-Commit-ID: KnHOb0aN4nE

UltraBlame original commit: 8b1c50cdb50c7eb65d6ace114b9e1a2b2f86c2f5

--- a/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_allow.https.html.ini
+++ b/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_allow.https.html.ini
@@ -1,5 +1,7 @@
 [
-getCurrentPosition_permission_deny
+getCurrentPosition_permission_allow
+.
+https
 .
 html
 ]
@@ -11,10 +13,15 @@ expected
 TIMEOUT
 [
 User
-denies
+allows
 access
 check
 that
+success
+callback
+is
+called
+or
 error
 callback
 is
@@ -22,7 +29,8 @@ called
 with
 correct
 code
+.
 ]
 expected
 :
-TIMEOUT
+NOTRUN
