--- a/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_deny.https.html.ini
+++ b/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_deny.https.html.ini
@@ -1,5 +1,7 @@
 [
-getCurrentPosition_permission_allow
+getCurrentPosition_permission_deny
+.
+https
 .
 html
 ]
@@ -11,15 +13,10 @@ expected
 TIMEOUT
 [
 User
-allows
+denies
 access
 check
 that
-success
-callback
-is
-called
-or
 error
 callback
 is
@@ -27,8 +24,7 @@ called
 with
 correct
 code
-.
 ]
 expected
 :
-NOTRUN
+TIMEOUT
