Backed out changeset 8b1c50cdb50c (bug 1072859) for failing devtools/client/responsive.html/test/browser/browser_permission_doorhanger.js. r=backout a=merge
MozReview-Commit-ID: LaknhYl9fEw

UltraBlame original commit: 193989276571a5bd19bc669c6ca42828abe7b4f1

--- a/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_allow.html.ini
+++ b/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_allow.html.ini
@@ -1,7 +1,5 @@
 [
-getCurrentPosition_permission_deny
-.
-https
+getCurrentPosition_permission_allow
 .
 html
 ]
@@ -13,10 +11,15 @@ expected
 TIMEOUT
 [
 User
-denies
+allows
 access
 check
 that
+success
+callback
+is
+called
+or
 error
 callback
 is
@@ -24,7 +27,8 @@ called
 with
 correct
 code
+.
 ]
 expected
 :
-TIMEOUT
+NOTRUN
