--- a/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_deny.html.ini
+++ b/testing/web-platform/meta/geolocation-API/getCurrentPosition_permission_deny.html.ini
@@ -1,7 +1,5 @@
 [
-getCurrentPosition_permission_allow
-.
-https
+getCurrentPosition_permission_deny
 .
 html
 ]
@@ -13,15 +11,10 @@ expected
 TIMEOUT
 [
 User
-allows
+denies
 access
 check
 that
-success
-callback
-is
-called
-or
 error
 callback
 is
@@ -29,8 +22,7 @@ called
 with
 correct
 code
-.
 ]
 expected
 :
-NOTRUN
+TIMEOUT
