Bug 1343652 - consider running jittests only when js/src or js/public are changed. r=dustin
MozReview-Commit-ID: CssJaIAnzNf

UltraBlame original commit: e7e1a3df8678d86eae87974d87bf0b2d3ea47031

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -1627,6 +1627,26 @@ suite
 jittest
 -
 chunked
+when
+:
+files
+-
+changed
+:
+-
+js
+/
+src
+/
+*
+*
+-
+js
+/
+public
+/
+*
+*
 jsreftest
 :
 description
