Bug 1213767 - Rule-view class toggle panel. r=jdescottes
MozReview-Commit-ID: 2roKEm6Jr26

UltraBlame original commit: a668191115832fb8edabe55f1370ebea8dffb0ac

--- a/devtools/client/inspector/rules/test/browser.ini
+++ b/devtools/client/inspector/rules/test/browser.ini
@@ -384,6 +384,41 @@ browser_rules_blob_stylesheet
 js
 ]
 [
+browser_rules_class_panel_add
+.
+js
+]
+[
+browser_rules_class_panel_content
+.
+js
+]
+[
+browser_rules_class_panel_edit
+.
+js
+]
+[
+browser_rules_class_panel_invalid_nodes
+.
+js
+]
+[
+browser_rules_class_panel_mutation
+.
+js
+]
+[
+browser_rules_class_panel_state_preserved
+.
+js
+]
+[
+browser_rules_class_panel_toggle
+.
+js
+]
+[
 browser_rules_colorpicker
 -
 and
