Bug 1232305 - Disable failing Mochitest DOM Media tests on Android - follow up 1, r=gbrown
UltraBlame original commit: 102f898ac465518575eadbebfad2e08e75a05d9e

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -5752,6 +5752,14 @@ android_version
 =
 =
 '
+15
+'
+|
+|
+android_version
+=
+=
+'
 22
 '
 #
@@ -7894,48 +7902,12 @@ skip
 -
 if
 =
-(
-android_version
+toolkit
 =
 =
 '
-17
+android
 '
-)
-|
-|
-(
-android_version
-=
-=
-'
-19
-'
-&
-&
-!
-debug
-)
-|
-|
-(
-android_version
-=
-=
-'
-22
-'
-)
-|
-|
-(
-android_version
-=
-=
-'
-23
-'
-)
 #
 android
 (
@@ -8668,50 +8640,12 @@ seamonkey
 "
 |
 |
-(
-android_version
+toolkit
 =
 =
 '
-15
+android
 '
-&
-&
-debug
-)
-|
-|
-(
-android_version
-=
-=
-'
-17
-'
-)
-|
-|
-(
-android_version
-=
-=
-'
-19
-'
-&
-&
-debug
-)
-|
-|
-(
-android_version
-=
-=
-'
-22
-'
-)
 #
 Seamonkey
 :
@@ -8868,30 +8802,20 @@ skip
 -
 if
 =
-(
 android_version
 =
 =
 '
 15
 '
-&
-&
-debug
-)
 |
 |
-(
 android_version
 =
 =
 '
 17
 '
-&
-&
-debug
-)
 #
 android
 (
@@ -8960,40 +8884,28 @@ skip
 -
 if
 =
-(
 android_version
 =
 =
 '
 15
 '
-&
-&
-debug
-)
 |
 |
-(
 android_version
 =
 =
 '
 17
 '
-&
-&
-debug
-)
 |
 |
-(
 android_version
 =
 =
 '
 22
 '
-)
 #
 android
 (
@@ -9603,6 +9515,14 @@ android_version
 '
 15
 '
+|
+|
+android_version
+=
+=
+'
+17
+'
 #
 android
 (
@@ -9661,6 +9581,22 @@ test_source_null
 .
 html
 ]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+17
+'
+#
+android
+(
+bug
+1232305
+)
 [
 test_source_write
 .
@@ -9708,6 +9644,22 @@ test_streams_autoplay
 .
 html
 ]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+17
+'
+#
+android
+(
+bug
+1232305
+)
 tags
 =
 msg
@@ -9973,17 +9925,12 @@ android_version
 '
 |
 |
-(
 android_version
 =
 =
 '
 19
 '
-&
-&
-debug
-)
 #
 android
 (
