--- a/testing/mochitest/manifests/autophone-media.ini
+++ b/testing/mochitest/manifests/autophone-media.ini
@@ -20,6 +20,40 @@ test_can_play_type
 .
 html
 ]
+skip
+-
+if
+=
+(
+android_version
+=
+=
+'
+23
+'
+&
+&
+debug
+)
+|
+|
+(
+android_version
+=
+=
+'
+25
+'
+&
+&
+debug
+)
+#
+android
+(
+bug
+1232305
+)
 [
 .
 .
@@ -36,6 +70,50 @@ test_can_play_type_mpeg
 .
 html
 ]
+skip
+-
+if
+=
+(
+android_version
+=
+=
+'
+15
+'
+)
+|
+|
+(
+android_version
+=
+=
+'
+23
+'
+&
+&
+debug
+)
+|
+|
+(
+android_version
+=
+=
+'
+25
+'
+&
+&
+debug
+)
+#
+android
+(
+bug
+1232305
+)
 [
 .
 .
@@ -100,6 +178,26 @@ test_played
 .
 html
 ]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1110922
+android
+(
+bug
+1153860
+bug
+1232305
+)
 [
 .
 .
@@ -116,3 +214,16 @@ test_playback
 .
 html
 ]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1316177
