--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -37,6 +37,24 @@ e10s
 only
 .
 [
+browser_tabSpinnerTypeProbe
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+#
+Tab
+spinner
+is
+e10s
+only
+.
+[
 browser_tabSwitchPrintPreview
 .
 js
