Bug 1345111 - Make the IPDL compiler error out when it finds sync-messages.ini entries without corresponding IPDL sync messages; r=billm
This ensures that our sync-messages.ini correctly reflects the existing set of
sync IPC messages we have.

UltraBlame original commit: e77b218d6da50d0089208996d224cf2102d0025e

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -2012,6 +2012,9 @@ GetWindowedPluginIAccessible
 ]
 description
 =
+platform
+=
+win
 #
 CPOWs
 [
@@ -2253,14 +2256,6 @@ PPluginInstance
 :
 :
 NPP_GetValue_NPPVpluginWantsAllNetworkStreams
-]
-description
-=
-[
-PPluginInstance
-:
-:
-NPP_GetValue_NPPVpluginNeedsXEmbed
 ]
 description
 =
@@ -2588,14 +2583,6 @@ description
 PPluginInstance
 :
 :
-NegotiatedCarbon
-]
-description
-=
-[
-PPluginInstance
-:
-:
 GetCompositionString
 ]
 description
@@ -2685,14 +2672,6 @@ PPluginModule
 :
 :
 OptionalFunctionsSupported
-]
-description
-=
-[
-PPluginModule
-:
-:
-PCrashReporter
 ]
 description
 =
@@ -3143,14 +3122,6 @@ description
 PContent
 :
 :
-PCrashReporter
-]
-description
-=
-[
-PContent
-:
-:
 NSSU2FTokenIsCompatibleVersion
 ]
 description
@@ -3304,14 +3275,6 @@ PContent
 :
 :
 AllocateLayerTreeId
-]
-description
-=
-[
-PContent
-:
-:
-GetGfxInfoFeatureStatus
 ]
 description
 =
@@ -3756,30 +3719,6 @@ PWebRenderBridge
 description
 =
 [
-PCompositorWidget
-:
-:
-EnterPresentLock
-]
-description
-=
-[
-PCompositorWidget
-:
-:
-LeavePresentLock
-]
-description
-=
-[
-PCompositorWidget
-:
-:
-ClearTransparentWindow
-]
-description
-=
-[
 PImageBridge
 :
 :
@@ -3856,14 +3795,6 @@ PLayerTransaction
 :
 :
 RequestProperty
-]
-description
-=
-[
-PTexture
-:
-:
-DestroySync
 ]
 description
 =
