Bug 1345111 follow-up: Add a few platform-specific sync IPC messages back; fake-r=billm
UltraBlame original commit: db91cf168102b2a59f955f97ef7a1015fdfddb43

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -3719,6 +3719,39 @@ PWebRenderBridge
 description
 =
 [
+PCompositorWidget
+:
+:
+EnterPresentLock
+]
+description
+=
+platform
+=
+win
+[
+PCompositorWidget
+:
+:
+LeavePresentLock
+]
+description
+=
+platform
+=
+win
+[
+PCompositorWidget
+:
+:
+ClearTransparentWindow
+]
+description
+=
+platform
+=
+win
+[
 PImageBridge
 :
 :
