Bug 1331154 - 10. Add testReorderTabs UI test. r=sebastian
MozReview-Commit-ID: InLNHxFhClB

UltraBlame original commit: 994de5a22aebd811ca056d689f3412af17310ec1

--- a/mobile/android/tests/browser/robocop/robocop.ini
+++ b/mobile/android/tests/browser/robocop/robocop.ini
@@ -1405,6 +1405,21 @@ gecko
 /
 tests
 /
+testReorderTabs
+.
+java
+]
+[
+src
+/
+org
+/
+mozilla
+/
+gecko
+/
+tests
+/
 testSessionHistory
 .
 java
