--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -36,15 +36,19 @@ See
 the
 schema
 in
-test
--
-descriptions
+taskcluster
+/
+taskgraph
+/
+transforms
+/
+tests
 .
 py
+#
 for
 a
 description
-#
 of
 the
 fields
