--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -920,6 +920,55 @@ android
 .
 3
 [
+test_ChangeWhileWaitingOnMissingData_mp4
+.
+html
+]
+skip
+-
+if
+=
+(
+(
+os
+=
+=
+"
+win
+"
+&
+&
+os_version
+=
+=
+"
+5
+.
+1
+"
+)
+|
+|
+(
+toolkit
+=
+=
+'
+android
+'
+)
+)
+#
+Not
+supported
+on
+xp
+and
+android
+2
+.
+3
+[
 test_DrainOnMissingData_mp4
 .
 html
