Bug 1345799: [MSE] Add flac in mp4 mochitest. r=gerald
MozReview-Commit-ID: CGW7kZa7u5q

UltraBlame original commit: 9a57f9a7b87a23cc461134d2a74c0ca08ed50cdb

--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -739,6 +739,58 @@ m4s
 ^
 headers
 ^
+flac
+/
+IS
+.
+mp4
+flac
+/
+IS
+.
+mp4
+^
+headers
+^
+flac
+/
+00001
+.
+m4s
+flac
+/
+00001
+.
+m4s
+^
+headers
+^
+flac
+/
+00002
+.
+m4s
+flac
+/
+00002
+.
+m4s
+^
+headers
+^
+flac
+/
+00003
+.
+m4s
+flac
+/
+00003
+.
+m4s
+^
+headers
+^
 [
 test_AudioChange_mp4
 .
@@ -1443,6 +1495,52 @@ android
 2
 .
 3
+[
+test_MediaSource_flac_mp4
+.
+html
+]
+skip
+-
+if
+=
+(
+(
+os
+=
+=
+"
+win
+"
+&
+&
+os_version
+=
+=
+"
+5
+.
+1
+"
+)
+|
+|
+(
+toolkit
+=
+=
+'
+android
+'
+)
+)
+#
+Not
+supported
+on
+xp
+and
+android
 [
 test_MediaSource_disabled
 .
