--- a/devtools/client/inspector/rules/test/browser.ini
+++ b/devtools/client/inspector/rules/test/browser.ini
@@ -1220,6 +1220,19 @@ js
 [
 browser_rules_grid
 -
+highlighter
+-
+restored
+-
+after
+-
+reload
+.
+js
+]
+[
+browser_rules_grid
+-
 toggle_01
 .
 js
