Bug 1343327 - Export more test job state as environment vars in taskcluster r=dustin
MozReview-Commit-ID: GBmL4lhAa8u

UltraBlame original commit: ebdd7d5fa7450f7ae6d685a584f136908b69e356

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -2466,6 +2466,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 android_emulator_unittest
@@ -2502,6 +2507,11 @@ suite
 mochitest
 default
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -2706,6 +2716,11 @@ true
 chunked
 :
 false
+mochitest
+-
+flavor
+:
+a11y
 config
 :
 by
@@ -2930,6 +2945,11 @@ default
 3600
 mozharness
 :
+mochitest
+-
+flavor
+:
+browser
 script
 :
 desktop_unittest
@@ -3160,6 +3180,11 @@ time
 3600
 mozharness
 :
+mochitest
+-
+flavor
+:
+browser
 script
 :
 desktop_unittest
@@ -3352,6 +3377,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+chrome
 script
 :
 android_emulator_unittest
@@ -3414,6 +3444,11 @@ mochitest
 chrome
 default
 :
+mochitest
+-
+flavor
+:
+chrome
 script
 :
 desktop_unittest
@@ -3553,6 +3588,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 android_emulator_unittest
@@ -3603,6 +3643,11 @@ plain
 clipboard
 default
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -3871,6 +3916,11 @@ default
 both
 mozharness
 :
+mochitest
+-
+flavor
+:
+chrome
 script
 :
 desktop_unittest
@@ -4151,6 +4201,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 android_emulator_unittest
@@ -4201,6 +4256,11 @@ plain
 gpu
 default
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -4381,6 +4441,13 @@ all
 ]
 mozharness
 :
+mochitest
+-
+flavor
+:
+jetpack
+-
+package
 script
 :
 desktop_unittest
@@ -4592,6 +4659,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 android_emulator_unittest
@@ -4630,6 +4702,11 @@ mochitest
 media
 default
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -4808,6 +4885,11 @@ layers
 false
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -5063,6 +5145,11 @@ android
 .
 *
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 android_emulator_unittest
@@ -5101,6 +5188,11 @@ mochitest
 gl
 default
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
@@ -5266,6 +5358,11 @@ all
 ]
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
 script
 :
 desktop_unittest
