Bug 1314405 - Provide a readme for eslint-plugin-mozilla, and add some more details to its package.json. r=mossop
MozReview-Commit-ID: DdzWwWEFvf6

UltraBlame original commit: 00beed6952433b6642e197ac0498f160e5b27b11

--- a/tools/lint/eslint/eslint-plugin-mozilla/package.json
+++ b/tools/lint/eslint/eslint-plugin-mozilla/package.json
@@ -19,7 +19,7 @@ version
 .
 2
 .
-27
+28
 "
 "
 description
@@ -91,13 +91,11 @@ cgi
 ?
 product
 =
-Firefox
+Testing
 &
 component
 =
-Developer
-%
-20Tools
+Lint
 "
 }
 "
@@ -105,24 +103,67 @@ homepage
 "
 :
 "
+http
+:
+/
+/
+gecko
+.
+readthedocs
+.
+io
+/
+en
+/
+latest
+/
+tools
+/
+lint
+/
+linters
+/
+eslint
+-
+plugin
+-
+mozilla
+.
+html
+"
+"
+repository
+"
+:
+{
+"
+type
+"
+:
+"
+hg
+"
+"
+url
+"
+:
+"
 https
 :
 /
 /
-bugzilla
+hg
 .
 mozilla
 .
 org
 /
-show_bug
-.
-cgi
-?
-id
-=
-1203520
+mozilla
+-
+central
+/
 "
+}
 "
 author
 "
@@ -234,9 +275,9 @@ node
 "
 >
 =
-0
+4
 .
-10
+2
 .
 0
 "
