--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -205,6 +205,49 @@ media
 tests
 -
 slow
+linux32
+-
+nightly
+/
+opt
+:
+build
+-
+platform
+:
+linux
+-
+nightly
+/
+opt
+test
+-
+sets
+:
+-
+linux32
+-
+tests
+-
+linux32
+-
+opt
+-
+tests
+-
+external
+-
+media
+-
+tests
+-
+external
+-
+media
+-
+tests
+-
+slow
 linux64
 /
 debug
@@ -269,6 +312,55 @@ media
 tests
 -
 slow
+-
+web
+-
+platform
+-
+tests
+-
+opt
+-
+only
+-
+tests
+-
+desktop
+-
+screenshot
+-
+capture
+-
+talos
+linux64
+-
+nightly
+/
+opt
+:
+build
+-
+platform
+:
+linux64
+-
+nightly
+/
+opt
+test
+-
+sets
+:
+-
+common
+-
+tests
+-
+external
+-
+media
+-
+tests
 -
 web
 -
