Bug 1346047 - Enable chrome style system mochitests and run style system mochitests on e10s. r=jmaher
MozReview-Commit-ID: 9Vj3mZL3IhJ

UltraBlame original commit: d8e49646361159d59c13aa54f62a85d86b0102d7

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -5281,7 +5281,7 @@ suite
 :
 mochitest
 /
-mochitest
+plain
 -
 style
 treeherder
@@ -5301,7 +5301,7 @@ video
 true
 e10s
 :
-false
+both
 run
 -
 on
@@ -5401,7 +5401,150 @@ mochitest
 -
 suite
 =
+plain
+-
+style
 mochitest
+-
+chrome
+-
+style
+:
+description
+:
+"
+Mochitest
+chrome
+run
+for
+style
+system
+"
+suite
+:
+mochitest
+/
+chrome
+-
+style
+treeherder
+-
+symbol
+:
+tc
+-
+M
+(
+cs
+)
+loopback
+-
+video
+:
+true
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+'
+stylo
+'
+'
+autoland
+'
+'
+mozilla
+-
+inbound
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+default
+:
+[
+'
+all
+'
+]
+e10s
+:
+false
+mozharness
+:
+mochitest
+-
+flavor
+:
+chrome
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+default
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+chrome
 -
 style
 reftest
