Bug 1345014 - Add max_aspect to support 16.74:9 screens. r=snorp
MozReview-Commit-ID: 9b7BveqBOX1

UltraBlame original commit: 1dcb8c7974b92c011da6e2a6e2fa722a2f0a3166

--- a/mobile/android/base/AndroidManifest.xml.in
+++ b/mobile/android/base/AndroidManifest.xml.in
@@ -369,6 +369,30 @@ true
 "
 /
 >
+<
+meta
+-
+data
+android
+:
+name
+=
+"
+android
+.
+max_aspect
+"
+android
+:
+value
+=
+"
+2
+.
+0
+"
+/
+>
 #
 ifdef
 MOZ_NATIVE_DEVICES
