Bug 1332061 Add warning for unsigned extensions r=florian
MozReview-Commit-ID: JAvjmh0IgBW

UltraBlame original commit: 782f34bf8bb5de282e6dfe8a83e26c81281c8c2f

--- a/browser/base/content/test/webextensions/browser.ini
+++ b/browser/base/content/test/webextensions/browser.ini
@@ -23,6 +23,9 @@ xpi
 browser_webext_nopermissions
 .
 xpi
+browser_webext_unsigned
+.
+xpi
 browser_webext_update1
 .
 xpi
@@ -77,6 +80,16 @@ browser_permissions_mozAddonManager
 .
 js
 ]
+[
+browser_permissions_unsigned
+.
+js
+]
+skip
+-
+if
+=
+require_signing
 [
 browser_update_interactive
 .
