Bug 1345756: P1. Add mochitest. r=gerald
testing seeking to last audio frame buffered.

MozReview-Commit-ID: A4Cr4OHs8qP

UltraBlame original commit: 574f66f6a635d6f48d0f9d420110e03882d6eaf3

--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -2018,6 +2018,55 @@ android
 .
 3
 [
+test_SeekToLastFrame_mp4
+.
+html
+]
+skip
+-
+if
+=
+(
+(
+os
+=
+=
+"
+win
+"
+&
+&
+os_version
+=
+=
+"
+5
+.
+1
+"
+)
+|
+|
+(
+toolkit
+=
+=
+'
+android
+'
+)
+)
+#
+Not
+supported
+on
+xp
+and
+android
+2
+.
+3
+[
 test_SeekTwice_mp4
 .
 html
