Bug 1343216 - Add blocklist tags in xpcshell tests r=kmag
MozReview-Commit-ID: 8HDgdSSFxyU

UltraBlame original commit: dd28321fb8491d5f04203b9f2b111f66124a7f13

--- a/security/manager/ssl/tests/unit/xpcshell.ini
+++ b/security/manager/ssl/tests/unit/xpcshell.ini
@@ -152,6 +152,7 @@ tags
 =
 addons
 psm
+blocklist
 [
 test_cert_chains
 .
@@ -307,6 +308,9 @@ test_ev_certs
 .
 js
 ]
+tags
+=
+blocklist
 run
 -
 sequentially
