--- a/services/common/tests/unit/xpcshell.ini
+++ b/services/common/tests/unit/xpcshell.ini
@@ -83,36 +83,57 @@ appname
 thunderbird
 "
 )
+tags
+=
+blocklist
 [
 test_blocklist_clients
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_blocklist_updater
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_blocklist_pinning
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_kinto
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_blocklist_signatures
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_storage_adapter
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_utils_atob
 .
