--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
@@ -198,11 +198,17 @@ desktop
 requesttimeoutfactor
 =
 2
+tags
+=
+blocklist
 [
 test_blocklist_prefs
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_blocklist_metadata_filters
 .
@@ -227,6 +233,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_blocklist_regexp
 .
@@ -242,6 +251,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bootstrap
 .
@@ -435,6 +447,9 @@ in
 xpi
 files
 .
+tags
+=
+blocklist
 [
 test_bug371495
 .
@@ -507,6 +522,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug394300
 .
@@ -609,6 +627,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug424262
 .
@@ -681,6 +702,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug449027
 .
@@ -705,6 +729,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug455906
 .
@@ -729,6 +756,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug465190
 .
@@ -777,6 +807,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug470377_1
 .
@@ -945,6 +978,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug514327_2
 .
@@ -969,6 +1005,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug514327_3
 .
@@ -993,6 +1032,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_bug521905
 .
@@ -1142,11 +1184,17 @@ test_bug619730
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_bug620837
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_bug655254
 .
@@ -1354,76 +1402,121 @@ test_gfxBlacklist_Device
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_DriverNew
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_Equal_DriverNew
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_Equal_DriverOld
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_Equal_OK
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_GTE_DriverOld
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_GTE_OK
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_No_Comparison
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_OK
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_OS
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_OSVersion_match
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_OSVersion_mismatch_OSVersion
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_OSVersion_mismatch_DriverVersion
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_Vendor
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_Version
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_gfxBlacklist_prefs
 .
@@ -1440,6 +1533,9 @@ skip
 if
 =
 true
+tags
+=
+blocklist
 [
 test_hasbinarycomponents
 .
@@ -1689,6 +1785,9 @@ os
 "
 android
 "
+tags
+=
+blocklist
 [
 test_pref_properties
 .
@@ -2128,6 +2227,9 @@ global
 XCurProcD
 dir
 .
+tags
+=
+blocklist
 [
 test_sourceURI
 .
@@ -2271,6 +2373,9 @@ test_softblocked
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_ext_management
 .
