--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell.ini
@@ -51,11 +51,17 @@ test_asyncBlocklistLoad
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_blocklist_gfx
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_cache_certdb
 .
@@ -111,6 +117,9 @@ test_pluginInfoURL
 .
 js
 ]
+tags
+=
+blocklist
 [
 test_provider_markSafe
 .
