--- a/browser/base/content/test/plugins/browser.ini
+++ b/browser/base/content/test/plugins/browser.ini
@@ -121,6 +121,9 @@ browser_bug743421
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_bug744745
 .
@@ -141,6 +144,9 @@ browser_bug812562
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_bug818118
 .
@@ -156,6 +162,9 @@ browser_clearplugindata
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_context_menu
 .
@@ -188,6 +197,9 @@ Linux
 bug
 909342
 )
+tags
+=
+blocklist
 [
 browser_CTP_crashreporting
 .
@@ -199,66 +211,105 @@ if
 =
 !
 crashreporter
+tags
+=
+blocklist
 [
 browser_CTP_data_urls
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_drag_drop
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_hide_overlay
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_iframe
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_multi_allow
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_nonplugins
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_notificationBar
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_outsideScrollArea
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_remove_navigate
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_resize
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_CTP_zoom
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_blocking
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_iterate_hidden_plugins
 .
@@ -269,16 +320,25 @@ browser_plugins_added_dynamically
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_pluginnotification
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_plugin_reloading
 .
 js
 ]
+tags
+=
+blocklist
 [
 browser_blocklist_content
 .
@@ -290,6 +350,9 @@ if
 =
 !
 e10s
+tags
+=
+blocklist
 [
 browser_globalplugin_crashinfobar
 .
