Bug 1342579: verify that a single PC can connect to different endpoints. r=mt
MozReview-Commit-ID: 8AKh3hvFIj9

UltraBlame original commit: 830770d5c2b8dbcd7218d1ca9e49fa9126e07954

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -3043,6 +3043,35 @@ on
 emulator
 )
 [
+test_peerConnection_threeUnbundledConnections
+.
+html
+]
+skip
+-
+if
+=
+(
+android_version
+=
+=
+'
+18
+'
+)
+#
+android
+(
+Bug
+1189784
+timeouts
+on
+4
+.
+3
+emulator
+)
+[
 test_selftest
 .
 html
