--- a/dom/plugins/test/mochitest/chrome.ini
+++ b/dom/plugins/test/mochitest/chrome.ini
@@ -191,6 +191,11 @@ test_privatemode_perwindowpb
 xul
 ]
 [
+test_refresh_navigator_plugins
+.
+html
+]
+[
 test_xulbrowser_plugin_visibility
 .
 xul
