--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -54,9 +54,6 @@ sjs
 browser_tab_dragdrop2_frame1
 .
 xul
-browser_tab_dragdrop_embed
-.
-html
 browser_web_channel
 .
 html
@@ -2209,7 +2206,17 @@ mulet
 e10s
 &
 &
+(
 debug
+|
+|
+os
+=
+=
+'
+linux
+'
+)
 )
 #
 Bug
