Bug 1345403 part 5 - Test video suspend canceling; r=jwwang
MozReview-Commit-ID: 99IDqpwuRIf

UltraBlame original commit: f6415ae0ba892b17b807c2dd1e0961140b1b80d0

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10689,6 +10689,22 @@ bug
 1232305
 )
 [
+test_background_video_cancel_suspend_taint
+.
+html
+]
+tags
+=
+suspend
+[
+test_background_video_cancel_suspend_visible
+.
+html
+]
+tags
+=
+suspend
+[
 test_background_video_no_suspend_disabled
 .
 html
