--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10813,6 +10813,14 @@ tags
 =
 suspend
 [
+test_background_video_drawimage_with_suspended_video
+.
+html
+]
+tags
+=
+suspend
+[
 test_temporary_file_blob_video_plays
 .
 html
